test/ConstValues/IntegerExpressionsSyntactic.code
// Constant globals on integer expressions
// REQUIRES: language_feature_CompileTimeValues
// REQUIRES: optimized_stdlib
// RUN: %target-language-frontend -emit-ir -primary-file %s -parse-as-library -enable-experimental-feature CompileTimeValues -verify

@const immutable constGlobal1: Int = (42 + 42 + 42) / 3
@const immutable constGlobal2: Int = MemoryLayout<UInt32>.size + 4
// expected-error@-1{{in a '@const' expression}}
@const immutable constGlobal3: Int = Int(17.0 / 3.5)
@const immutable constGlobal4: Int = constGlobal1 + 1
@const immutable constGlobal5: Int = -constGlobal1 + 1
